Feat: Change content website

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Scaffold Bootstrap Template</title>
+  <title>Detail Peralatan - SafeSync</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,34 +43,37 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <h1><a href="index.html">Scaffold</a></h1>
+        <h1><a href="index.html">SafeSync</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="index.html">Beranda</a></li>
+          <li class="dropdown"><a href="#"><span>Tentang K3</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-              <li><a class="nav-link scrollto" href="#team">Team</a></li>
-              <li><a class="nav-link scrollto" href="#testimonials">Testimonials</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
+              <li><a class="nav-link scrollto" href="index.html#pengertian">Pengertian</a></li>
+              <li><a class="nav-link scrollto" href="index.html#tujuanK3">Tujuan</a></li>
+              <li><a class="nav-link scrollto" href="index.html#peralatan">Peralatan</a></li>
+              <li><a class="nav-link scrollto" href="index.html#pendapatK3">Pendapat Ahli</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto active" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li class="dropdown"><a href="#"><span>Pengaplikasian</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a class="nav-link scrollto" href="index.html#implementasi">Implementasi</a></li>
+              <li><a class="nav-link scrollto" href="index.html#perusahaan">Contoh perusahaan</a></li>
+              <li><a class="nav-link scrollto" href="index.html#jasa">Penyedia Jasa</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="#"><span>Lainnya</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a class="nav-link scrollto" href="index.html#tim">Tim Pengembang</a></li>
+              <li><a class="nav-link scrollto" href="index.html#faq">Faq</a></li>
+              <li><a class="nav-link scrollto" href="index.html#kontak">Contact</a></li>
+            </ul>
+          </li>
+          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -93,14 +96,14 @@
 
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Portfolio Details</li>
+          <li>Detail Peralatan</li>
         </ol>
-        <h2>Portfolio Details</h2>
+        <h2>Alat Pelindung Diri</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= Portfolio Details Section ======= -->
+    <!-- ======= Detail Peralatan Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
@@ -111,15 +114,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/apd.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
+                  <img src="assets/img/portfolio/apd-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
+                  <img src="assets/img/portfolio/apd3.png" alt="">
                 </div>
 
               </div>
@@ -129,18 +132,17 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Informasi</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Nama</strong>: Alat Pelindung Diri</li>
+                <li><strong>Kategori</strong>: Rumah Sakit - Lab - konstruksi</li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>This is an example of portfolio detail</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Gaun bedah atau pakaian pelindung yang digunakan untuk melindungi tubuh dari cairan dan bahan berbahaya. <br><br>
+                Terdapat beberapa jenis apd. Ada yang khusus untuk rumah sakit dan lab. Ada juga yang digunakan untuk konstruksi
               </p>
             </div>
           </div>
@@ -148,7 +150,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Details Section -->
+    </section><!-- End Detail Peralatan Section -->
 
   </main><!-- End #main -->
 
@@ -160,51 +162,49 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Scaffold</h3>
+              <h3>SafeSync</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Jl. Soekarno Hatta No.9, Jatimulyo,<br>
+                Kec. Lowokwaru, Kota Malang,<br>
+                Jawa Timur 65141<br><br>
+                <strong>Phone:</strong> 0341404424<br>
+                <strong>Email:</strong> humas@polinema.ac.id<br>
               </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Link Utama</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Beranda</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#pengertian">Tentang K3</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#tujuanK3">Tujuan K3</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#implementasi">Implementasi K3</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#peralatan">Peralatan K3</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Link lainnya</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#jasa">Penyedia Jasa</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#tim">Tim Pengembang</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#perusahaan">Contoh Perusahaan</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#faq">Faq</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#kontak">Contact Us</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
+            <h4>Tentang Website SafeSync</h4>
+            <p>Website ini bertujuan untuk mengedukasi terkait k3. Mulai dari pengertian, fungsi, tujuan k3. Terdapat juga rekomendasi penyedia jasa yang membantu menerapkan prinsip k3.</p>
+            <div class="social-links mt-3">
+              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            </div>
 
           </div>
 
@@ -214,13 +214,13 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Scaffold</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>SafeSync</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/scaffold-bootstrap-metro-style-template/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/SafeSync-bootstrap-metro-style-template/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
