Fix: Change title web and fix typo

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -139,7 +139,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Deskripsi</h2>
               <p>
                 Gaun bedah atau pakaian pelindung yang digunakan untuk melindungi tubuh dari cairan dan bahan berbahaya. <br><br>
                 Terdapat beberapa jenis apd. Ada yang khusus untuk rumah sakit dan lab. Ada juga yang digunakan untuk konstruksi
