Feat: add detail kit

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div>
             <h1>Persiapkan kerja yang sehat secara jasmani dan rohani</h1>
             <h2>Dengan prinsip keselamatan dan kesehatan kerja atau K3.</h2>
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <a href="#implementasi" class="btn-get-started scrollto">Get Started</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
@@ -309,8 +309,8 @@
                 <p>Rumah Sakit - Lab</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/apd.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Diri"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/apd.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Diri"><i class="bx bx-search"></i></a>
+                <a href="apd-detail.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -322,8 +322,8 @@
                 <p>konstruksi</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/apd-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Diri"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/apd-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Diri"><i class="bx bx-search"></i></a>
+                <a href="apd-detail.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -336,8 +336,8 @@
                 <p>Rumah Sakit - Lab</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/pelindung mata dan wajah.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Mata dan Wajah"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/pelindung mata dan wajah.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Mata dan Wajah"><i class="bx bx-search"></i></a>
+                <a href="pelindung-wajah.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -351,8 +351,8 @@
                 <p>Rumah Sakit - Lab</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/masker.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Respirasi"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/masker.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Respirasi"><i class="bx bx-search"></i></a>
+                <a href="pelindung-wajah.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -365,8 +365,8 @@
                 <p>Rumah Sakit</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/handSanitizer.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="hand Sanitizer"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/handSanitizer.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="hand Sanitizer"><i class="bx bx-search"></i></a>
+                <a href="hand-sanitizer.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -379,8 +379,8 @@
                 <p>Lab</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/pencuci-mata.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pencuci Mata dan Darurat"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/pencuci-mata.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pencuci Mata dan Darurat"><i class="bx bx-search"></i></a>
+                <a href="pencuci-mata.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -393,8 +393,8 @@
                 <p>Lab</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/deteksi-gas.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pendeteksi Gas"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/deteksi-gas.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pendeteksi Gas"><i class="bx bx-search"></i></a>
+                <a href="pendeteksi-gas.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -404,11 +404,11 @@
               <img src="assets/img/portfolio/peringatan-petunjuk.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Papan Peringatan dan Petunjuk Keselamatan:</h4>
-                <p>RUmah sakit - Lab</p>
+                <p>Rumah sakit - Lab</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/peringatan-petunjuk.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/peringatan-petunjuk.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bx bx-search"></i></a>
+                <a href="papan.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -421,8 +421,8 @@
                 <p>Rumah Sakit - Lab - Pabrik</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/sarun-tangan-rs.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Tangan"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/sarun-tangan-rs.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Tangan"><i class="bx bx-search"></i></a>
+                <a href="sarung-tangan.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -435,8 +435,8 @@
                 <p>Pabrik - Kontruksi</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/sepatu.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sepatu Pelindung"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/sepatu.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sepatu Pelindung"><i class="bx bx-search"></i></a>
+                <a href="sepatu.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -448,8 +448,8 @@
                 <p>Pabrik - Kontruksi</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/helm.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Helm Keselamatan"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/helm.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Helm Keselamatan"><i class="bx bx-search"></i></a>
+                <a href="pelindung-kepala.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -461,8 +461,8 @@
                 <p>Pabrik - Rumah Sakit</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/pelindung-kepala2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pelindung Kepala"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/pelindung-kepala2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pelindung Kepala"><i class="bx bx-search"></i></a>
+                <a href="pelindung-kepala.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -474,8 +474,8 @@
                 <p>Kontruksi</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/pelindung-telinga.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Telinga"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/pelindung-telinga.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Telinga"><i class="bx bx-search"></i></a>
+                <a href="pelindung-telinga.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -487,8 +487,8 @@
                 <p>Kontruksi</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/sarung-tangan-anti-slip.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Tangan"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/sarung-tangan-anti-slip.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alat Pelindung Tangan"><i class="bx bx-search"></i></a>
+                <a href="sarung-tangan.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -501,8 +501,8 @@
                 <p>Rumah Sakit - Kontruksi - Lab - Pabrik</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/first-kit.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Peralatan P3K"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/first-kit.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Peralatan P3K"><i class="bx bx-search"></i></a>
+                <a href="p3k.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -515,8 +515,8 @@
                 <p>Rumah Sakit - Kontruksi - Lab - Pabrik</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/pemadam.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Peralatan P3K"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/pemadam.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Peralatan P3K"><i class="bx bx-search"></i></a>
+                <a href="pemadam.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -536,7 +536,7 @@
             <p> Mulai dengn perusahaan-perusahaan yang dapat menyediakan layanan profesional untuk membantu perusahaan anda dalam menerapkan dan memelihara prinsip K3 di lingkungan kerja.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#pricing">Mulai sekarang</a>
+            <a class="cta-btn align-middle" href="#jasa">Mulai sekarang</a>
           </div>
         </div>
 
@@ -957,13 +957,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4 class="mb-0">Email:</h4>
-                <p>humas@polinema.ac.id</p>
+                <p>safesync@polinema.ac.id</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4 class="mb-0">Call:</h4>
-                <p>0341404424</p>
+                <p>085105120605</p>
               </div>
               
             </div>
@@ -994,8 +994,8 @@
                 Jl. Soekarno Hatta No.9, Jatimulyo,<br>
                 Kec. Lowokwaru, Kota Malang,<br>
                 Jawa Timur 65141<br><br>
-                <strong>Phone:</strong> 0341404424<br>
-                <strong>Email:</strong> humas@polinema.ac.id<br>
+                <strong>Phone:</strong> 085105120605<br>
+                <strong>Email:</strong> safesync@polinema.ac.id<br>
               </p>
             </div>
           </div>
@@ -1029,7 +1029,7 @@
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+              <a href="#" class="google-search"><i class="bx bxl-skype"></i></a>
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
 
