--- a/pemadam.html
+++ b/pemadam.html
@@ -98,7 +98,7 @@
           <li><a href="index.html">Home</a></li>
           <li>Detail Peralatan</li>
         </ol>
-        <h2>Alat Pelindung Diri</h2>
+        <h2>Alat Pemadam Kebakaran</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -112,18 +112,17 @@
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/apd.jpg" alt="">
+                  <img src="assets/img/portfolio/pemadam3.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/pemadam.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/apd-2.jpg" alt="">
+                  <img src="assets/img/portfolio/pemadam2.jpg" alt="">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/apd3.png" alt="">
-                </div>
+                
 
               </div>
               <div class="swiper-pagination"></div>
@@ -134,15 +133,15 @@
             <div class="portfolio-info">
               <h3>Informasi</h3>
               <ul>
-                <li><strong>Nama</strong>: Alat Pelindung Diri</li>
-                <li><strong>Kategori</strong>: Rumah Sakit - Lab - konstruksi</li>
+                <li><strong>Nama</strong>: Alat Pemadam Kebakaran</li>
+                <li><strong>Kategori</strong>: Rumah Sakit - Lab - Pabrik</li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Deskripsi</h2>
               <p>
-                Gaun bedah atau pakaian pelindung yang digunakan untuk melindungi tubuh dari cairan dan bahan berbahaya. <br><br>
-                Terdapat beberapa jenis apd. Ada yang khusus untuk rumah sakit dan lab. Ada juga yang digunakan untuk konstruksi
+                Pemadam Kebakaran adalah peralatan yang wajib ada di setiap bidang pekerjaan. Alat pemadam kebakaran memberikan perlindungan awal terhadap potensi bahaya kebakaran sebelum bantuan pemadam kebakaran profesional tiba.  <br><br>
+                Dengan desain yang sederhana dan mudah digunakan, Pemadam Kebakaran memungkinkan siapa pun, tanpa pelatihan khusus, untuk memberikan respons cepat terhadap api. Instruksi yang jelas di label atau panduan membuat penggunaan pemadam kebakaran menjadi lebih mudah dipahami.
               </p>
             </div>
           </div>
